[tool.poetry]
name = "bigc"
version = "0.1.0"
description = "Unofficial client for the BigCommerce API"
authors = ["Ryan Thomson <ryan@medshift.com>", "Dillon Hartley <dillon@medshift.com>", "Adam Walsh <adam@medshift.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
