[tool.poetry]
name = "bigc"
version = "0.1.1"
description = "Unofficial client for the BigCommerce API"
license = "MIT"
authors = ["Ryan Thomson <ryan@medshift.com>", "Dillon Hartley <dillon@medshift.com>", "Adam Walsh <adam@medshift.com>"]
readme = "README.md"
homepage = "https://github.com/MedShift/bigc"
repository = "https://github.com/MedShift/bigc.git"
keywords = ["bigcommerce", "api", "client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
