[project]
name = "bigc"
version = "1.0.0b3"
description = "Unofficial client for the BigCommerce API"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Adam Walsh", email = "adam@medshift.com" },
    { name = "Dillon Hartley", email = "dillon@medshift.com" },
    { name = "Milo Weinberg", email = "milo@medshift.com" },
    { name = "Ryan Thomson", email = "ryan@medshift.com" }
]
keywords = ["bigcommerce", "api", "client"]
dependencies = [
    "requests~=2.32"
]
dynamic = ["classifiers"]

[project.urls]
homepage = "https://github.com/MedShift/bigc"
repository = "https://github.com/MedShift/bigc.git"

[tool.poetry]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.group.dev.dependencies]
pytest = "~=7.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
